<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.Timer_log">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/phase"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />


        <Spinner
            android:id="@+id/spinnerPhase"
            android:layout_width="265dp"
            android:layout_height="match_parent">

        </Spinner>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/horastar"
            android:layout_width="187dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/interrupcion"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/interrupcion"
            android:layout_width="240dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stop"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/horastop"
            android:layout_width="187dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnhorafin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/delta"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/delta"
            android:layout_width="258dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/comments"
            android:textColor="#000"
            android:textSize="23sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/EtxtComments"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />



    </LinearLayout>



    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigaion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>